# BarrettAutomate

./: .gitignore  APACdata.xlsx  CLAUDE.md  ESCRSdata.xlsx  IOLCalcdata.xlsx  Kanedata.xlsx  README.md  automate_apacrs.py  barrett_calculator.py  barrett_calculator_single.py  build.py  clean_packages.py  playwright_script.py  pyproject.toml  pytest.ini  requirements.txt
docs/: CHANGELOG.md
service/: barrett_calculator.py  iol_power_calculator.py  kane_calculator.py
tests/: README.md  conftest.py  test_barrett_calculator.py
utils/: config.ini  config_manager.py
