[project]
name = "barrettautomate"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "playwright>=1.55.0",
]

[dependency-groups]
dev = [
    "coverage>=7.9.2",
    "pyright>=1.1.409",
    "pytest>=8.4.2",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.pyright]
typeCheckingMode = "standard"
pythonVersion = "3.13"
include = ["app", "service", "utils", "tests"]
exclude = ["scripts"]
reportMissingTypeStubs = false
reportUnusedVariable = true
reportUnusedImport = true
